modulizacion de interfaz con carga dinamica

--- a/vistas/home.html
+++ b/vistas/home.html
@@ -48,6 +48,13 @@
     <button class="btn btn-warning me-2">Sign up Today</button>
     <button class="btn btn-outline-dark">Book a Session</button>
   </div>
-
+  
+  <!-- Contenedores para módulos -->
+  <div id="DescubreTupasion"></div>
+  <div id="secretosYoga"></div>
+  
+  <!-- Incluir el archivo JS que carga los módulos -->
+  <script src="../js/main.js"></script>
+   
 </body>
 </html>
