feat: se incorporaron las nuevas visatas junto a los estilos

--- a/vistas/DescubreTupasion.html
+++ b/vistas/DescubreTupasion.html
@@ -1,1 +1,38 @@
-<h1>vistas Descubre tu pasión</h1>
+<div class="container py-5">
+
+    <!-- Primera Sección -->
+    <div class="row align-items-center g-5 mb-5">
+      <!-- Texto -->
+      <div class="col-md-6 px-4">
+        <h2 class="fw-bold">Descubre tu pasión</h2>
+        <p class="text-muted">Libera tu yogui interior con nuestros instructores experimentados</p>
+        <p>
+          Eleva tu práctica y desbloquea todos los beneficios del yoga. Desde la respiración consciente hasta asanas fortalecedoras,
+          nuestras clases se adaptan a todos los niveles, empoderándote para profundizar tu conexión con el cuerpo, la mente y el espíritu.
+        </p>
+        <button class="btn btn-dark">Inscríbete hoy</button>
+      </div>
+      <!-- Imagen -->
+      <div class="col-md-6 text-center px-4">
+          <img src="../img/modelo 2.jpg" alt="Yoga Pose" class="rounded" style="width: 316px; height: 189px; object-fit: cover;">
+      </div>
+    </div>
+
+    <!-- Segunda Sección -->
+    <div class="row align-items-center g-5">
+      <!-- Imagen -->
+      <div class="col-md-6 text-center order-md-1 order-2 px-4">
+        <img src="../img/modelo3.avif" alt="Yoga Pose" class="img-fluid rounded">
+      </div>
+      <!-- Texto -->
+      <div class="col-md-6 order-md-2 order-1 px-4">
+        <p class="text-muted small">Explora nuestras opciones</p>
+        <h2 class="fw-bold">Abraza el poder transformador del yoga</h2>
+        <p>
+          Cultiva la paz interior y la vitalidad física con nuestro enfoque holístico del yoga. Explora un plan de estudios diverso con flujos de Vinyasa vigorizantes, prácticas restaurativas de Yin y técnicas de meditación consciente. Emprende un viaje de autodescubrimiento y desbloquea todos los beneficios de un estilo de vida equilibrado con yoga.
+        </p>
+        <button class="btn btn-danger">Únete al movimiento</button>
+      </div>
+    </div>
+
+  </div>
