--- a/vistas/home.html
+++ b/vistas/home.html
@@ -4,33 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Serenity Yoga</title>
+  <link rel="icon" type="image/png" href="../img/yoga.png"><!-- cambio del icono Favicon -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body>
-
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light px-4">
-    <a class="navbar-brand fw-bold text-danger" href="#">Serenity</a>
-    <div class="collapse navbar-collapse">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Classes</a></li>
-        <li class="nav-item"><a class="nav-link btn btn-outline-secondary ms-3" href="#">Join</a></li>
-      </ul>
-    </div>
-  </nav>
 
   <!-- Hero Section -->
   <div class="container-fluid full-height">
     <div class="row h-100">
       <!-- Left Column -->
       <div class="col-md-6 left-section d-flex flex-column justify-content-center">
-        <p class="mb-1">Discover the Serenity of Yoga</p>
-        <h1 class="fw-bold">Embrace Your <br> Spiritual Journey</h1>
-        <p>Unlock the Power of Mindfulness and Breath. Achieve optimal well-being, explore our comprehensive Yoga Classes tailored to all levels, from Beginner to Advanced.</p>
-        <button class="btn btn-dark mt-3">Join our Classes</button>
+        <p class="mb-1">Descubre la serenidad del yoga</p>
+        <h1 class="fw-bold">Acepta tu <br> viaje espiritual</h1>
+        <p>Descubre el poder de la atención plena y la respiración. Alcanza un bienestar óptimo y explora nuestras completas clases de yoga adaptadas a todos los niveles, desde principiante hasta avanzado.</p>
+        <button class="btn btn-dark mt-3">Únete a nuestras clases</button>
       </div>
 
       <!-- Right Column -->
@@ -42,16 +30,17 @@
 
   <!-- Program Section -->
   <div class="program-section">
-    <p class="text-muted">Explore Our Programs</p>
-    <h2 class="fw-bold">Discover Your Practice</h2>
-    <p>Elevate Your Mind, Body, and Spirit with Our Holistic Approach to Yoga. From Invigorating Vinyasa Flows to Restorative Yin Sessions, We Offer a Diverse Curriculum to Suit Every Yoga's Needs. Unwind, Strengthen, and Cultivate Inner Harmony Through the Transformative Power of Yoga.</p>
-    <button class="btn btn-warning me-2">Sign up Today</button>
-    <button class="btn btn-outline-dark">Book a Session</button>
+    <p class="text-muted">Explora nuestros programas</p>
+    <h2 class="fw-bold">Descubre tu práctica</h2>
+    <p>Eleva tu mente, cuerpo y espíritu con nuestro enfoque holístico del yoga. Desde vigorizantes secuencias de vinyasa hasta sesiones restaurativas de yin, ofrecemos un programa diverso que se adapta a todas las necesidades del yoga. Relájate, fortalécete y cultiva la armonía interior a través del poder transformador del yoga.</p>
+    <button class="btn btn-warning me-2">Regístrese hoy mismo</button>
+    <button class="btn btn-outline-dark">Reservar una sesión</button>
   </div>
   
   <!-- Contenedores para módulos -->
   <div id="DescubreTupasion"></div>
   <div id="secretosYoga"></div>
+  <div id="nutreTualma"></div>
   
   <!-- Incluir el archivo JS que carga los módulos -->
   <script src="../js/main.js"></script>
