--- a/vistas/secretosYoga.html
+++ b/vistas/secretosYoga.html
@@ -1,1 +1,21 @@
-<h1>vista secretos Yoga</h1>
+<section class="yoga-section">
+    <div class="container">
+      <div class="row align-items-center g-5">
+        <!-- Texto -->
+        <div class="col-md-6 px-4">
+          <p class="text-uppercase small">Nuestra Filosofía</p>
+          <h2 class="fw-bold">Descubre los Secretos del Yoga</h2>
+          <p>
+            Sumérgete en el poder transformador del yoga. Desde dinámicos flujos de Vinyasa hasta prácticas restaurativas de Yin,
+            nuestro enfoque holístico te ayuda a cultivar fuerza física, claridad mental y armonía espiritual.
+          </p>
+          <button class="btn btn-danger">Inscríbete ahora</button>
+        </div>
+
+        <!-- Imagen -->
+        <div class="col-md-6 text-center px-4">
+          <img src="../img/modelo 4.jpg" alt="Yoga Pose" class="img-fluid rounded">
+        </div>
+      </div>
+    </div>
+  </section>
